kubernetes/main/apps/flux-system/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/networkpolicy.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: konflate-allow-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: konflate
  policyTypes:
    - Ingress
  ingress:
    # Allow kube-prometheus to scrape konflate metrics
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 8081
